scoped and update status

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,7 +1,7 @@
 
 paadhyu: 
   profile_name: "paadhyu"
-  email: "paadhyu@hotmail.com"
+  email: "paadhyu@gmail.com"
   first_name: "Praveen"
   last_name: "Boddu"
 
@@ -9,5 +9,5 @@ paadhyu:
 rajesh: 
   profile_name: "rchamarthi"
   email: "rchamarthi@gmail.com"
-  first_name: "Praveen"
-  last_name: "Boddu"
+  first_name: "Rajesh"
+  last_name: "Chamarthi"
